--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -43,11 +43,14 @@
             display: flex;
             justify-content: flex-end;
             align-items: flex-end;
-            @media screen and (max-width: @browser_media-medium-screen) {
-                .btn-confirm{
-                    line-height: inherit;
+            .btn-confirm {
+                white-space: normal;
+            }
+            @media screen and (max-width: @browser_media-not-big),
+                screen and (max-height: @browser_media-not-big) and (max-width: 1120px){
+                .btn-confirm {
+                    line-height: normal;
                     overflow-wrap: break-word;
-                    white-space: normal;
                     width: 100%;
                 }
             }
